# bandersnatch-vrf-spec

./: README.md  references.bib  references.csl  specification.md  specification.tex
assets/example/: Cargo.toml
assets/example/src/: main.rs
assets/vectors/: bandersnatch_sha-512_ell2_ietf.json  bandersnatch_sha-512_ell2_pedersen.json  bandersnatch_sha-512_ell2_ring.json  bandersnatch_sha-512_ell2_thin.json  bandersnatch_sha-512_ell2_tiny.json
